--- a/localisation/polish/MD_counter_ui_l_polish.yml
+++ b/localisation/polish/MD_counter_ui_l_polish.yml
@@ -1,7 +1,7 @@
 ﻿l_polish:
  TOPBAR_ADD_TOOLTIP: "£click_left §YL Kliknij§!, aby dodać §YKonfigurowalny wyświetlacz§!\n"
  TOPBAR_INFO_TEXT: "[GetSelectedTopbarInfoText]"
- TOPBAR_INFO_TOOLTIP: "[GetDynamicTooltip]\n\n\n(£click_right §YR Kliknij§!) Usuń wszystkie okna (zapisuje wybrane ekrany)\n(£key_ctrl + £click_right §YCtrl R Kliknij§!) Czyści wszystkie wybrane ekrany\n(£key_ctrl + § _9+ £click_right §YCtrl Shift R Kliknij§!) Wyczyść wszystkie okna i wybrane wyświetlacze\n\n\nSkonfigurowany numer wyświetlacza: £click_right 3"
+ TOPBAR_INFO_TOOLTIP: "[GetDynamicTooltip]\n\n\n(£click_right §YP Kliknięcie§!) Usuwa wszystkie okna (zapisuje wybrane wyświetlanie)\n(£key_ctrl + £click_right §YCtrl P Kliknięcie§!) Czyści wszystkie wybrane wyświetlenia\n(£key_ctrl + £key_shift + £click_right §YCtrl Shift P Kliknięcie§!) Czyści wszystkie okna i wybrane wyświetlenia\n\n\nNumer skonfigurowanego wyświetlania: [?i]"
  TOTAL_CASUALTIES_TT: "§YSkutki naszych obecnych Ofiar§!\n Wsparcie w Wojnie Bazowej: [?currentWarsupportHit|R%]"
  TOPBAR_CASUALTIES_TEXT: "[?ROOT.GetCasualtiesAmount]"
  TOPBAR_SURRENDER_TEXT: "[?ROOT.surrender_progress|%1R]"
