--- a/localisation/polish/MD_focus_BRA_l_polish.yml
+++ b/localisation/polish/MD_focus_BRA_l_polish.yml
@@ -105,7 +105,7 @@
  BRA_global_diplomacy: "Globalna Dyplomacja"
  BRA_global_diplomacy_desc: "Ameryka, Europa, Chiny, Rosja i Japonia – główne kraje świata – wszystkie walczą o naszą uwagę i przychylność. Ale do kogo się przytulimy?"
  BRA_align_to_nato: "NATO"
- BRA_align_to_nato_desc: "Brazylia od bardzo dawna ściśle współpracuje z krajami NATO. Jednym z naszych najdłużej współpracujących partnerów są Stany Zjednoczone. Naturalnie zacieśnienie więzi nie będzie pracochłonnym zadaniem."
+ BRA_align_to_nato_desc: "Brazil has worked closely with the countries of NATO for a very long time. One of our longest-standing partners is the United States. Naturally, forming closer bonds will not be a laborious task."
  BRA_non_aligned: "Nie wyrównany"
  BRA_non_aligned_desc: "Koloniści przybyli tu dawno temu w poszukiwaniu nowego życia, próbując wyplątać się z polityki wielkich mocarstw europejskich. Powinniśmy uhonorować ich i ich dziedzictwo, pozostając niezaangażowani i zachowując naszą neutralność w nadchodzących konfliktach."
  BRA_eastern_alignment: "Wyrównanie wschodnie"
@@ -309,7 +309,7 @@
  BRA_project_devastate_the_amazon: "Projekt dewastacji Amazonii"
  BRA_project_devastate_the_amazon_desc: "Po salach rządowych krąży kolejny projekt, który zniszczy Amazonię, ale także poprawi naszą gospodarkę. Co mamy z tym zrobić?"
  BRA_dismantle_the_agency: "Zlikwidować agencje"
- BRA_dismantle_the_agency_desc: "Cardoso stworzyło przepisy mające na celu zlikwidowanie kilku fałszywych agencji, które defraudowały duże kwoty publicznych funduszy na rozwój. Mamy nadzieję, że §Rwydając pieniądze§ teraz, zarobimy więcej pieniędzy później."
+ BRA_dismantle_the_agency_desc: "Cardoso ustanowił ustawodawstwo w celu likwidacji kilku fałszywych agencji, które przywłaszczały duże sumy publicznych środków na rozwój. Poprzez §Rwydawanie pieniędzy§! teraz, mamy nadzieję, że w przyszłości zarobimy więcej."
  BRA_march_of_the_excluded: "Marsz Wykluczonych"
  BRA_march_of_the_excluded_desc: "500. rocznica Brazylii została zniweczona przez protesty rdzennej ludności i przypominanie nam o przeszłości. Wyszli na ulice, aby ostro skrytykować establishment za jego niezdolność do wspierania tych, którzy byli tu pierwsi."
  BRA_native_protests: "Rodzime protesty"
@@ -433,8 +433,8 @@
  BRA_region_expansion_desc: "Potrzebujemy ziemi. Niektóre kraje potrzebują pomocy. Jeśli się nam podporządkują, zyskają duży impuls dla swojej gospodarki, a my dostaniemy ziemię. To korzystna sytuacja, prawda?"
  BRA_unasal: "NIESAMOWITE"
  BRA_unasal_desc: "Potrzebujemy sojuszników! Czy nie powinniśmy poprosić inne kraje Ameryki Południowej, aby przyłączyły się do nas i zawiązały silny sojusz?"
- BRA_suspend_ven: "Zawiesić Wenezuelę"
- BRA_suspend_ven_desc: "Wizja kontynentu Wenezueli nie jest zgodna z naszą. Nie można pozwolić, aby nadal istnieli w MERCOSUR i dalej korumpowali innych członków organizacji."
+ BRA_suspend_ven: "Suspend Venezuela"
+ BRA_suspend_ven_desc: "Venezuela’s vision of the continent does not align with ours. They cannot be allowed to continue existing in MERCOSUR and further corrupting other members of the organization."
  BRA_trade_agreement: "Umowy handlowe"
  BRA_trade_agreement_desc: "Powinniśmy w dalszym ciągu zwiększać handel z innymi krajami Ameryki Południowej. W ten sposób poprawimy nasze relacje i naszą gospodarkę."
  BRA_discuss_currency: "Omów walutę"
@@ -444,7 +444,7 @@
  BRA_inv_obs: "Zaproś Obserwatorów"
  BRA_inv_obs_desc: "Zaprośmy zewnętrznych obserwatorów, aby byli świadkami siły MERCOSUR-u."
  BRA_united_continent: "Zjednoczony Kontynent"
- BRA_united_continent_desc: "Cała Ameryka Południowa powinna zjednoczyć się we wspólnych interesach gospodarczych – nawet nasi rywale, Wenezuelczycy."
+ BRA_united_continent_desc: "The entirety of South America should be united together in common economic interests - even our rivals the Venezuelans."
  BRA_follow_euro: "Podążaj za Euro"
  BRA_follow_euro_desc: "Zamiast opierać nasz handel na dolarach amerykańskich, będziemy używać euro jako wspólnego środka wymiany UNASAL."
  BRA_cooperation: "Współpraca"
@@ -459,8 +459,6 @@
  BRA_new_coalition_desc: "Brazylijska lewica ma jedną przewagę nad nacjonalistami: są bardziej zjednoczeni. Aby odnieść większe korzyści, należy stworzyć koalicję!"
  BRA_parties_of_the_people: "Partie ludowe"
  BRA_parties_of_the_people_desc: "Żaden rząd nie spotyka się z tak dużą dezaprobatą. Doskonałym tego przykładem był nasz poprzedni rząd, który spotkał się z bardzo niskim poparciem i zakończył się impeachmentem."
- BRA_anti_rw_rethoric: "Retoryka antyprawicowa"
- BRA_anti_rw_rethoric_desc: "Prawica jest najgorszą rzeczą dla Brazylii! Musimy je teraz zakończyć!"
  BRA_strenghten_coalition: "Wzmocnić Koalicję"
  BRA_strenghten_coalition_desc: "Musimy zadbać o to, aby nasze partie i ideologie były jedyną dominującą."
  BRA_new_brazil: "Nowa Brazylia"
@@ -910,7 +908,7 @@
  BRA_legacy_of_vargas: "Dziedzictwo Vargasa"
  BRA_legacy_of_vargas_desc: "Vargas popełnił wiele błędów, ale zjednoczył naród brazylijski pod nowym porządkiem patriotycznym i kulturowym. Teraz Éneas honoruje swoje dziedzictwo, naprawiając swoje błędy."
  BRA_empower_lula: "Wzmocnij Lulę"
- BRA_empower_lula_desc: "Nie jesteśmy pewni, czy wpływy i władza Luli i Partii Robotniczej utrzymają się na zawsze. Powinniśmy wzmocnić Lulę i dać mu pewne korzyści..."
+ BRA_empower_lula_desc: "We are not sure if Lula and the Workers Party's Influence and power will hold on forever. We should empower Lula and give him some benefits..."
  BRA_empower_party: "Wzmocnij PT"
  BRA_empower_party_desc: "Wzmocnienie pozycji PT uczyni z nas największą imprezę w Brazylii!"
  BRA_doutrination_in_schools: "Indoktrynacja w szkołach"
@@ -1458,3 +1456,5 @@
  BRA_alcolumbre: "Davi Alcolumbre"
  BRA_pacheco: "Rodrigo Pacheco"
  BRA_cartels_dynamic_modifier: "Kartele i handel narkotykami"
+ BRA_anti_rw_rhetoric: "Anti Right-Wing Rhetoric"
+ BRA_anti_rw_rhetoric_desc: "The right-wing is the worst thing for Brazil! We need to end them now!"
