--- a/localisation/polish/MD_focus_ETH_l_polish.yml
+++ b/localisation/polish/MD_focus_ETH_l_polish.yml
@@ -351,7 +351,7 @@
  ETH_idea_refactored_debt: "Refaktoryzowany dług"
  ETH_idea_refactored_debt_desc: "Refaktoryzacja naszego zadłużenia to niezawodny sposób na zapewnienie większej stabilności naszemu narodowi."
  ETH_eritrean_integration_category: "Wysiłki integracyjne Erytrei"
- ETH_eritrean_integration_category_desc: "Obecnie ciężko pracujemy, aby zintegrować naród Erytrei z naszym narodem. Może to być trudna droga do osiągnięcia naszego ostatecznego celu, ale jest konieczna, jeśli mamy być narodem pod jednym sztandarem.\n\ n\n§HCieżący poziom integracji§!: §G[?ETH_eritrean_acceptance|2]%§!\n\n§Rozprzestrzenianie języka HAmharic§!: §G[?ETH_amharic_speakers|2]%§!\n\n§Rozprzestrzenianie się propagandy §!: §G[?ETH_propaganda_distribution|2]%§!\n\n§HSeparatystów Tłumienie§!: §G[?ETH_crackdown_on_bozos|2]%§!"
+ ETH_eritrean_integration_category_desc: "Obecnie ciężko pracujemy, aby zintegrować naród Erytrei z naszym narodem. Może to być trudna droga do osiągnięcia naszego ostatecznego celu, ale jest konieczna, jeśli mamy być narodem pod jednym sztandarem.\n\n\n§HCieżący poziom integracji§!: §G[?ETH_eritrean_acceptance|2]%§!\n\n§HRozprzestrzenianie języka HAmharic§!: §G[?ETH_amharic_speakers|2]%§!\n\n§HRozprzestrzenianie się propagandy §!: §G[?ETH_propaganda_distribution|2]%§!\n\n§HSeparatystów Tłumienie§!: §G[?ETH_crackdown_on_bozos|2]%§!"
  ETH_integration_process_tick: "Proces integracji"
  ETH_full_integration: "Postaw na pełną integrację"
  ETH_full_integration_desc: "Z §Y[ERI.GetAdjective]§! ludzi znajdujących się pod naszym naciskiem, nadszedł czas, aby stłumić ostatnie pozostałości fałszywego państwa znanego wcześniej jako §Y[ERI.GetName]§!."
@@ -368,7 +368,7 @@
  ETH_make_arrests: "Aresztować zdeklarowanych krytyków"
  ETH_make_arrests_desc: "„Każdy jest krytykiem” – to głupie stwierdzenie, które sugeruje, że wszyscy są równi. Tak nie jest. Najprostszym rozwiązaniem tego dylematu jest po prostu aresztowanie tych, którzy negatywnie oceniają nas i nasz rząd."
  ETH_eritrean_federalisation_category: "Postęp federalizacji Erytrei"
- ETH_eritrean_federalisation_category_desc: "Obecnie ciężko pracujemy nad uchwaleniem Aktu Federacji. Może to być trudna droga do osiągnięcia naszego ostatecznego celu, ale jest konieczna, jeśli mamy być w pewnym stopniu zjednoczonym narodem pod sztandarem federalnym.\n \n\n§HCbieżący postęp federalizacji§!: §G[?ETH_eritrean_federation_process|2]%§!\n\n§Rozprzestrzenianie się języka hamharskiego§!: §G[?ETH_amharic_speakers2|2]%§!\n\n§ Rozprzestrzenianie się propagandy HP§!: §G[?ETH_propaganda_distribution2|2]%§!\n\n§Tłumienie separatystów§!: §G[?ETH_crackdown_on_bozos2|2]%§!"
+ ETH_eritrean_federalisation_category_desc: "Aktualnie pracujemy nad przeforsowaniem Ustawy o Federacji. Może to być trudna droga do przebycia, aby dotrzeć do naszego ostatecznego celu, ale jest to konieczne, jeśli chcemy być nieco zjednoczonym narodem pod federalną banderą.\n\n\n§HObecny postęp w federalizacji§!: §G[?ETH_eritrean_federation_process|2]%§!\n\n§HRozprzestrzenianie języka amharskiego§!: §G[?ETH_amharic_speakers2|2]%§!\n\n§HRozpowszechnianie propagandy§!: §G[?ETH_propaganda_distribution2|2]%§!\n\n§HSupresja separatystów§!: §G[?ETH_crackdown_on_bozos2|2]%§!"
  ETH_federalisation_process_tick: "Proces federalizacji"
  ETH_federalisation_process_tick_desc: "Co §Y30 dni§! będziemy na bieżąco informowani o naszych postępach w zdobywaniu §Y[ERI.GetAdjective]§! aby ludzie i systemy były zgodne z naszym sposobem myślenia."
  ETH_full_federalisation: "Podpisz Drugi Akt Federacji"
