--- a/localisation/polish/MD_focus_FIN_l_polish.yml
+++ b/localisation/polish/MD_focus_FIN_l_polish.yml
@@ -174,7 +174,7 @@
  FIN_claim_eastern_karelia_desc: "Rosja będzie musiała zapłacić za szkody wyrządzone w przeszłości Finlandii. Rozstaną się ze swoim terytorium tak samo jak my."
  FIN_david_against_goliath: "Dawid przeciwko Goliatowi"
  FIN_david_against_goliath_desc: "Jeśli zajdzie taka potrzeba, będziemy samotni, aby naprawić zło historii. To może być naprawdę historia Dawida przeciwko Goliatowi, ale tak jak Dawid zwyciężył, my także zwyciężymy."
- FIN_border_security_TT: "Zbuduj §YLand Fort§ poziomu 2! w każdym województwie przygranicznym"
+ FIN_border_security_TT: "Zbuduj poziom 2 §YFort Lądowy§! w każdej prowincji przygranicznej."
  Finland.1.t: "Reforma poboru"
  Finland.1.d: "Fińska armia trzymała się mocno swoich przepisów poboru do wojska nawet po tym, jak przestało istnieć główne zagrożenie dla suwerenności Finlandii, czyli Związek Radziecki. Obecnie fińskie przepisy dotyczące poboru do wojska wydają się archaiczne, ponieważ mężczyźni i kobiety nie są traktowani jednakowo w zależności od tego, kto może służyć, a kto nie służyć w służbie cywilnej lub wojskowej, jak długo i jaka kara za odmowę służby.\n\nNiektórzy twierdzą, że pobór powinien odbywać się zostać zniesione i aby zarówno pieniądze, jak i uwolniona siła robocza mogły następnie przynieść korzyści gospodarce cywilnej. Bardziej konserwatywni myśliciele wskazują na Federację Rosyjską jako „Związek Radziecki, ale mniej czerwony”, z możliwą gotowością Rosji do przywrócenia globalnych ambicji, co stanowi bardzo realne zagrożenie dla niepodległości Finlandii."
  Finland.1.a: "Status quo jest zadowalający."
@@ -205,7 +205,7 @@
  Finland.7.a: "Musi poprowadzić Finlandię!"
  Finland.7.b: "Będzie naszym monarchą konstytucyjnym."
  Finland.8.t: "Finlandia oferuje członkostwo w OUBZ – za odpowiednią opłatą"
- Finland.8.d: "W ciągu ostatnich kilku lat, a szczególnie w ciągu ostatnich kilku miesięcy Finlandia dobrowolnie zwróciła się do Rosji z przyjaźnią i pomocą i chociaż w Sankt Petersburgu i Helsinkach utworzono fińsko-rosyjskie kluby przyjaźni, wydaje się, że Finowie mają inne plany.\n\ n Żądają ogromnych sum pieniędzy, w zasadzie sprzedając swoją lojalność."
+ Finland.8.d: "W ciągu ostatnich kilku lat, a szczególnie w ciągu ostatnich kilku miesięcy Finlandia dobrowolnie zwróciła się do Rosji z przyjaźnią i pomocą i chociaż w Sankt Petersburgu i Helsinkach utworzono fińsko-rosyjskie kluby przyjaźni, wydaje się, że Finowie mają inne plany.\n\nŻądają ogromnych sum pieniędzy, w zasadzie sprzedając swoją lojalność."
  Finland.8.a: "Akceptujemy."
  Finland.8.b: "Śmiejemy się im w twarz."
  Finland.9.t: "Finlandia oferuje wzajemne porozumienie obronne"
