--- a/localisation/polish/MD_focus_SER_VOJ_MNT_l_polish.yml
+++ b/localisation/polish/MD_focus_SER_VOJ_MNT_l_polish.yml
@@ -516,7 +516,7 @@
  SER_uchenia_with_sov: "§YZachowanie§! ćwiczenia z [SOV.GetFlag]§YRussia§!"
  SER_uchenia_with_usa: "§YZachowanie§! ćwiczenia z [USA.GetFlag]§YUnited States§!"
  SER_doctrine_category: "[SER.GetFlag]Serbska doktryna wojskowa"
- SER_doctrine_category_desc: "\n\n\n\n\n\n£SER_desctext_export_doctrine\n\n\n\n\n\n\n\n\n§YDoktryna wojskowa§! jest odzwierciedleniem §Ypolityki zagranicznej§ naszego [SER.GetFlag]kraju, którego uważamy za naszego §Wroga§! i kto jest naszym §Gally§!. Czy jesteś gotowy na §Ratak§! kogokolwiek, czy też będziemy §Gbronić§! siebie od zewnętrznych §Wrogów§!"
+ SER_doctrine_category_desc: "\n\n\n\n\n\n£SER_desctext_export_doctrine\n\n\n\n\n\n\n\n\n§YDoktryna wojskowa§! jest odzwierciedleniem §Ypolityki zagranicznej§! naszego [SER.GetFlag] kraju, którego uważamy za naszego §RWroga§! i kto jest naszym §Gsojusznikiem§!. Czy jesteś gotowy na §Ratak§! kogokolwiek, czy też będziemy §Gbronić§! siebie od zewnętrznych §RWrogów§!"
  SER_de_fence_doctrines: "[SER.GetFlag]§YObrona§! Doktryna"
  SER_anti_rom_doctrines: "[ROM.GetFlag]§RANty-rumuński§! Doktryna wojskowa"
  SER_anti_bos_doctrines: "[BOS.GetFlag]§RAanty-bośniacki§! Doktryna wojskowa"
@@ -1959,7 +1959,7 @@
  KOS_Yugoslav_war_state: "Blizny wojny jugosłowiańskiej"
  KOS_Yugoslav_war_state_desc: "Chociaż po wojnie z Jugosławią udało nam się uzyskać pewien poziom autonomii, nasi ludzie byli wyczerpani i znużeni wojną. Sami nie jesteśmy w stanie załatać tych blizn, będziemy potrzebować pomocy i współpracy innych.\n§W-------------§!\nTen Duch Narodowy zostanie §RRusunięty §! jeśli ukończymy §H Bandaż na rany§! skupia się."
  KOS_Ruined_Nations: "Zagrożenie Serbii"
- KOS_Ruined_Nations_desc: "Jesteśmy na podwórku Serbii i przez cały czas musimy być bardzo czujni, a ich wpływ na nas sprawia, że ​​bardzo trudno jest zrobić prawie cokolwiek.\n§W------------------§ !\nTen duch narodowy zostanie §RRusunięty§! jeśli uzyskamy niepodległość lub utworzymy Federację z Albanią."
+ KOS_Ruined_Nations_desc: "Jesteśmy na podwórku Serbii i przez cały czas musimy być bardzo czujni, a ich wpływ na nas sprawia, że ​​bardzo trudno jest zrobić prawie cokolwiek.\n§W------------------§!\nTen duch narodowy zostanie §RRusunięty§! jeśli uzyskamy niepodległość lub utworzymy Federację z Albanią."
  KOS_Land_Mines: "Miny lądowe"
  KOS_bad_water_acces: "Zły dostęp do wody"
  KOS_ethnic_troubles: "Problemy etniczne"
