--- a/localisation/polish/MD_focus_SWI_l_polish.yml
+++ b/localisation/polish/MD_focus_SWI_l_polish.yml
@@ -184,9 +184,9 @@
  SWI_idea_armed_population: "Uzbrojona ludność szwajcarska"
  SWI_idea_armed_population_desc: "W następstwie pewnych niedawnych zmian w polityce rządu rząd [ROOT.GetName] zdecydował, że wszyscy odpowiedni obywatele muszą zostać przeszkoleni w zakresie posługiwania się bronią palną i muszą posiadać jedną broń palną na obywatela."
  SWI_swiss_neutrality: "Neutralność Szwajcarii"
- SWI_swiss_neutrality_desc: "§Zasady specjalne:§!\n\n§YMy§! §NIE MOŻNA§! §Wypowiedz wojnę innym krajom!§!\n-------------\nSzwajcarzy są znani na całym świecie jako neutralni. Od momentu powstania jako republika kraj nie brał udziału w żadnym ofensywnym konflikcie i zachował neutralność podczas obu wojen światowych.\n--------------\nTen duch narodowy może być § R Usunięto§! jeśli wypełnimy §HDogłaszamy koniec szwajcarskiej neutralności§! Centrum."
+ SWI_swiss_neutrality_desc: "§YSpecjalne Zasady:§!\n\n§YNie§! §RMOŻEMY§! §Yogłosić wojny innym krajom!§!\n--------------\nSzwajcarzy są znani na całym świecie ze swojej neutralności. Od czasów założenia republiki kraj nie brał udziału w żadnym rodzaju agresywnego konfliktu i pozostał neutralny podczas obu wojen światowych.\n--------------\nTen Narodowy Duch może zostać §Rusunięty§!, jeśli ukończymy fokus §HZakończenie Neutralności Szwajcarii§!."
  SWI_swiss_neutrality2: "Neutralność Szwajcarii"
- SWI_swiss_neutrality2_desc: "§Zasady specjalne:§!\n\n§YMy§! §NIE MOŻNA§! §Wypowiedz wojnę innym krajom!§!\n-------------\nSzwajcarzy są znani na całym świecie jako neutralni. Od momentu powstania jako republika kraj nie brał udziału w żadnym ofensywnym konflikcie i zachował neutralność podczas obu wojen światowych.\n--------------\nTen duch narodowy może być § R Usunięto§! jeśli wypełnimy §HDogłaszamy koniec szwajcarskiej neutralności§! Centrum."
+ SWI_swiss_neutrality2_desc: "§YSpecjalne Zasady:§!\n\n§YMy§! §RNIE MOŻEMY§! §Ywypowiedzieć wojny innym krajom!§!\n--------------\nSzwajcarzy są znani na całym świecie z swojej neutralności. Od momentu założenia republiki kraj nie prowadził żadnych ofensywnych konfliktów i pozostał neutralny podczas obu wojen światowych.\n--------------\nTen Duch Narodowy może zostać §Rusunięty§!, jeśli ukończymy fokus §HOgłoszenie Końca Neutralności Szwajcarii§!."
  SWI_european_tanks: "Oferty na czołgi w Europie"
  SWI_european_tanks_desc: ""
  SWI_defensive_preparations: "Przygotowania obronne"
