--- a/localisation/polish/MD_focus_USA_l_polish.yml
+++ b/localisation/polish/MD_focus_USA_l_polish.yml
@@ -2077,7 +2077,7 @@
  usa.8.o1: "Mamy nadzieję na japońskie przebaczenie."
  usa.8.o2: "Ameryka winna?! Śmieszny!"
  usa.9.t: "Lot 261 linii Alaska Airlines"
- usa.9.d: "31 stycznia 2000 roku samolot McDonnell Douglas MD-83 linii Alaska Airlines Flight 261 lecący z Puerto Vallarta w Meksyku do Seattle w USA rozbił się w morzu około 5 mil na północ od wyspy Anacapa u wybrzeży Kalifornii.\n\ nW katastrofie spowodowanej niewłaściwą i niedbałą konserwacją zginęło wszystkich 83 pasażerów i 5 członków załogi, co spowodowało łącznie 88 ofiar śmiertelnych. Wśród zabitych pasażerów byli autor Jean Gandesberry, rodzimy aktywista i przywódca Alaski Morris Thompson oraz prowadząca radiowy talk show Cynthia Oti."
+ usa.9.d: "31 stycznia 2000 roku samolot McDonnell Douglas MD-83 linii Alaska Airlines Flight 261 lecący z Puerto Vallarta w Meksyku do Seattle w USA rozbił się w morzu około 5 mil na północ od wyspy Anacapa u wybrzeży Kalifornii.\n\nW katastrofie spowodowanej niewłaściwą i niedbałą konserwacją zginęło wszystkich 83 pasażerów i 5 członków załogi, co spowodowało łącznie 88 ofiar śmiertelnych. Wśród zabitych pasażerów byli autor Jean Gandesberry, rodzimy aktywista i przywódca Alaski Morris Thompson oraz prowadząca radiowy talk show Cynthia Oti."
  usa.9.o1: "Tragedia."
  usa.10.t: "Koniec „Orzeszków ziemnych”"
  usa.10.d: "Śmierć legendy komiksu Charlesa M. Schulza 12 lutego 2000 roku oznaczała koniec legendy i pewnej epoki. Urodzony w Minneapolis artysta komiksowy rysował szkice komiksowe „Peanuts” przez ponad 50 lat, a także większość scenariuszy filmowych i telewizyjnych swoich komiksowych dzieci związanych z Charliem Brownem. Łącznie ponad 17 800 unikalnych komiksów „The Peanuts” było najdłużej emitowaną serią komiksową wszechczasów. Dzień po śmierci twórcy w niedzielnych gazetach ukazał się ostatni oryginalny komiks Peanuts.\n\nŚmierć Schulza pozostawia zarówno fanów komiksów, jak i zagorzałych czytelników gazet w żałobie w całym kraju. Seria komiksów nie będzie kontynuowana zgodnie z życzeniem Schulza, ale przy 17 800 komiksach wystarczy, aby gazety mogły je powtórzyć."
@@ -2087,7 +2087,7 @@
  usa.11.d: "W wyniku dramatycznego i traumatycznego zdarzenia 6-letnia Kayla Rolland, uczennica szkoły podstawowej Buell w stanie Michigan, została śmiertelnie postrzelona przez swojego 6-letniego kolegę z klasy Dedricka Owensa z pistoletu P-32 wujka Owensa, który znalazło małe dziecko leżąc w domu wujka. Dedrick powiedział Kayli „Nie lubię cię”, po czym strzelił jej w ramię w obecności nauczyciela i 22 innych uczniów. Kula przebiła istotną tętnicę, powodując ogromną utratę krwi i śmierć młodej dziewczyny o 10:30. Kayla Rolland jest najmłodszą ofiarą strzelaniny w szkole w historii Ameryki."
  usa.11.o1: "Czy nadeszła era przemocy z użyciem broni?"
  usa.12.t: "Eksplozja Phillipsa w 2000 roku"
- usa.12.d: "Około [GetDateText] doszło do eksplozji w Houston Chemical Complex firmy Phillips Petroleum w Pasadenie w Teksasie.\n\nWybuch, a następnie pożar spowodowały śmierć jednej osoby, a 71 osób zostało rannych w zakładzie chemicznym w wyniku oparzeń lub wdychania toksycznego dymu.\n\ nZabitą osobą jest 45-letni przełożony Rodney Gott, który przeżył już pierwszą katastrofę w Phillips w 1989 r. i wkrótce po eksplozji pozostał w płonącej fabryce, aby ratować innych ludzi. Dach budynku, w którym się znajdował, gwałtownie się zawalił, miażdżąc pod sobą Gotta."
+ usa.12.d: "Około [GetDateText] doszło do eksplozji w Houston Chemical Complex firmy Phillips Petroleum w Pasadenie w Teksasie.\n\nWybuch, a następnie pożar spowodowały śmierć jednej osoby, a 71 osób zostało rannych w zakładzie chemicznym w wyniku oparzeń lub wdychania toksycznego dymu.\n\nZabitą osobą jest 45-letni przełożony Rodney Gott, który przeżył już pierwszą katastrofę w Phillips w 1989 r. i wkrótce po eksplozji pozostał w płonącej fabryce, aby ratować innych ludzi. Dach budynku, w którym się znajdował, gwałtownie się zawalił, miażdżąc pod sobą Gotta."
  usa.12.o1: "Wypadki się zdarzają."
  usa.12.o2: "Rozpocznij pełne dochodzenie."
  usa.13.t: "USA są z nami!"
@@ -2416,7 +2416,7 @@
  USA_is_territory_flag: "to §YStany Zjednoczone§! terytorium"
  USA_has_wall_street_faction_TT: "Ma frakcję wewnętrzną §YWall ​​Street§!"
  USA_not_expanding_other_resources_TT: "Nie można rozszerzać innych zasobów"
- USA_not_expanded_states_resources_three_times_TT: "Nie powiększył §YZasobów§ państwa! §G3§! §YTimes§!"
+ USA_not_expanded_states_resources_three_times_TT: "Nie rozszerzył §Yzasobów§! państwowych §G3§! §Yrazy§!"
  USA_deregulate_wall_street_decision_tt: "§YSiła Regulaminu§! jest większa niż §Y10§!\n"
  USA_regulate_wall_street_decision_tt: "§YSiła Regulaminu§! jest mniejsza niż §Y90§!\n"
  USA_allowed_microsoft_merger: "Dozwolone §YMMicrosoft§! Połączenie"
