--- a/localisation/polish/MD_techs_l_polish.yml
+++ b/localisation/polish/MD_techs_l_polish.yml
@@ -3022,17 +3022,17 @@
  kenetic_kill_vehicle: "Kinetyczny pojazd zabijający"
  kenetic_kill_vehicle_desc: "Kinetyczny pojazd zabijający"
  KILLSAT1: "KILLSAT 1985"
- KILLSAT1_desc: "Pojazd do zabijania kinetycznego - „Zabójczy satelita” (KILLSAT 1985):\n§YWystrzelenie w przestrzeń kosmiczną§!:\nMasa: §Y4000§! kg\n§YBroń przeciwsatelitarna§!:\nDokładność: §Y40%§!\n§ _0Produkcja§!:\nCena za jednostkę: $§Y0,3§! miliard | Przemysł cywilny na jednostkę: §Y2§! | Dni produkcyjne na jednostkę: §Y30§!"
+ KILLSAT1_desc: "Pojazd do zabijania kinetycznego - „Zabójczy satelita” (KILLSAT 1985):\n§YWystrzelenie w przestrzeń kosmiczną§!:\nMasa: §Y4000§! kg\n§YBroń przeciwsatelitarna§!:\nDokładność: §Y40%§!\n§YProdukcja§!:\nCena za jednostkę: $§Y0,3§! miliard | Przemysł cywilny na jednostkę: §Y2§! | Dni produkcyjne na jednostkę: §Y30§!"
  KILLSAT2: "KILLSAT 1995"
- KILLSAT2_desc: "Pojazd do zabijania kinetycznego - „Killer Satellite” (KILLSAT 1995):\n§YWystrzelenie w przestrzeń kosmiczną§!:\nMasa: §Y3000§! kg\n§YBroń przeciwsatelitarna§!:\nDokładność: §Y50%§!\n§ _0Produkcja§!:\nCena za jednostkę: $§Y0,4§! miliard | Przemysł cywilny na jednostkę: §Y2§! | Dni produkcyjne na jednostkę: §Y30§!"
+ KILLSAT2_desc: "Pojazd do zabijania kinetycznego - „Killer Satellite” (KILLSAT 1995):\n§YWystrzelenie w przestrzeń kosmiczną§!:\nMasa: §Y3000§! kg\n§YBroń przeciwsatelitarna§!:\nDokładność: §Y50%§!\n§YProdukcja§!:\nCena za jednostkę: $§Y0,4§! miliard | Przemysł cywilny na jednostkę: §Y2§! | Dni produkcyjne na jednostkę: §Y30§!"
  KILLSAT3: "KILLSAT 2005"
- KILLSAT3_desc: "Pojazd do zabijania kinetycznego - „Killer Satellite” (KILLSAT 2005):\n§YWystrzelenie w przestrzeń kosmiczną§!:\nMasa: §Y2500§! kg\n§YBroń przeciwsatelitarna§!:\nDokładność: §Y60%§!\n§ _0Produkcja§!:\nCena za jednostkę: $§Y0,45§! miliard | Przemysł cywilny na jednostkę: §Y2§! | Dni produkcyjne na jednostkę: §Y35§!"
+ KILLSAT3_desc: "Pojazd do zabijania kinetycznego - „Killer Satellite” (KILLSAT 2005):\n§YWystrzelenie w przestrzeń kosmiczną§!:\nMasa: §Y2500§! kg\n§YBroń przeciwsatelitarna§!:\nDokładność: §Y60%§!\n§YProdukcja§!:\nCena za jednostkę: $§Y0,45§! miliard | Przemysł cywilny na jednostkę: §Y2§! | Dni produkcyjne na jednostkę: §Y35§!"
  KILLSAT4: "KILLSAT 2015"
- KILLSAT4_desc: "Pojazd do zabijania kinetycznego - „Killer Satellite” (KILLSAT 2015):\n§YWystrzelenie w przestrzeń kosmiczną§!:\nMasa: §Y2000§! kg\n§YBroń przeciwsatelitarna§!:\nDokładność: §Y70%§!\n§ _0Produkcja§!:\nCena za jednostkę: $§Y0,5§! miliard | Przemysł cywilny na jednostkę: §Y2§! | Dni produkcyjne na jednostkę: §Y40§!"
+ KILLSAT4_desc: "Pojazd do zabijania kinetycznego - „Killer Satellite” (KILLSAT 2015):\n§YWystrzelenie w przestrzeń kosmiczną§!:\nMasa: §Y2000§! kg\n§YBroń przeciwsatelitarna§!:\nDokładność: §Y70%§!\n§YProdukcja§!:\nCena za jednostkę: $§Y0,5§! miliard | Przemysł cywilny na jednostkę: §Y2§! | Dni produkcyjne na jednostkę: §Y40§!"
  KILLSAT5: "KILLSAT 2025"
- KILLSAT5_desc: "Pojazd do zabijania kinetycznego - „Zabójczy satelita” (KILLSAT 2025):\n§YWystrzelenie w przestrzeń kosmiczną§!:\nMasa: §Y1500§! kg\n§YBroń przeciwsatelitarna§!:\nDokładność: §Y80%§!\n§ _0Produkcja§!:\nCena za jednostkę: $§Y0,55§! miliard | Przemysł cywilny na jednostkę: §Y2§! | Dni produkcyjne na jednostkę: §Y45§!"
+ KILLSAT5_desc: "Pojazd do zabijania kinetycznego - „Zabójczy satelita” (KILLSAT 2025):\n§YWystrzelenie w przestrzeń kosmiczną§!:\nMasa: §Y1500§! kg\n§YBroń przeciwsatelitarna§!:\nDokładność: §Y80%§!\n§YProdukcja§!:\nCena za jednostkę: $§Y0,55§! miliard | Przemysł cywilny na jednostkę: §Y2§! | Dni produkcyjne na jednostkę: §Y45§!"
  KILLSAT6: "KILLSAT 2035"
- KILLSAT6_desc: "Pojazd do zabijania kinetycznego - „Zabójczy satelita” (KILLSAT 2035):\n§YWystrzelenie w przestrzeń kosmiczną§!:\nMasa: §Y1000§! kg\n§YBroń przeciwsatelitarna§!:\nDokładność: §Y90%§!\n§ _0Produkcja§!:\nCena za jednostkę: $§Y0,6§! miliard | Przemysł cywilny na jednostkę: §Y2§! | Dni produkcyjne na jednostkę: §Y50§!"
+ KILLSAT6_desc: "Pojazd do zabijania kinetycznego - „Zabójczy satelita” (KILLSAT 2035):\n§YWystrzelenie w przestrzeń kosmiczną§!:\nMasa: §Y1000§! kg\n§YBroń przeciwsatelitarna§!:\nDokładność: §Y90%§!\n§YProdukcja§!:\nCena za jednostkę: $§Y0,6§! miliard | Przemysł cywilny na jednostkę: §Y2§! | Dni produkcyjne na jednostkę: §Y50§!"
  RODS1: "Pręty od Boga"
  RODS1_desc: "Bombardowanie kinetyczne (pręty Boga):\n§YWystrzelenie kosmosu§!:\nMasa: §Y20000§! kg\n§YWalka§!:\nUszkodzenia: §Y10§!\n§YProdukcja§!:\nCena za jednostkę: $§Y0,5§! miliard | Przemysł cywilny na jednostkę: §Y3§! | Dni produkcyjne na jednostkę: §Y60§!"
  RODS2: "Pręty wolframowe"
