--- a/localisation/polish/replace/replaced_from_operatives_l_polish.yml
+++ b/localisation/polish/replace/replaced_from_operatives_l_polish.yml
@@ -410,7 +410,7 @@
  upgrade_civil_intel: "Wywiad cywilny"
  upgrade_civil_intel_desc: "§LNie wszystkie wysiłki związane z gromadzeniem informacji wywiadowczych są z natury skierowane na wrogą armię.  Rozwój przemysłu, produkcja i wydobywanie strategicznych zasobów naturalnych, zmiany w infrastrukturze, edukacji, a nawet radykalne zmiany w nastrojach społecznych to czynniki krytyczne wpływające na charakter narodów podczas wojny.§!"
  upgrade_military_intel: "Wywiad wojskowy"
- upgrade_military_intel_desc: "§ 0. Nadwyżka lub deficyt zaopatrzenia, stan ich rezerwy wojskowej, liczba i charakter jej czynnego lub potencjalnego personelu, charakter jego przywództwa, zdolność jego wsparcia oraz rozmieszczenie sił wroga.  Te rzeczy musimy wiedzieć, jeśli mamy odnieść sukces w konflikcie z naszym przeciwnikiem.§!"
+ upgrade_military_intel_desc: "§LNadwyżka lub deficyt zaopatrzenia, stan ich rezerwy wojskowej, liczba i charakter ich aktywnego lub potencjalnego personelu, charakter ich przywództwa, zdolność ich wsparcia oraz rozmieszczenie sił wroga. Te rzeczy musimy znać, jeśli mamy odnieść sukces w konflikcie przeciwko naszemu przeciwnikowi.§!"
  upgrade_maritime_intel: "Wywiad Morski"
  upgrade_maritime_intel_desc: "§L Znajomość liczebności i rozmieszczenia sił morskich wroga ma kluczowe znaczenie dla powodzenia każdego konfliktu morskiego. Monitorowanie rozmów między personelem marynarki wojennej, gromadzenie zapisów dotyczących zużycia paliwa lub amunicji, a nawet proste zliczenie liczby statków w porcie może z łatwością doprowadzić do sukcesu lub porażki każdego konfliktu morskiego.§!"
  upgrade_air_recon: "Rozpoznanie lotnicze"
