--- a/localisation/polish/replace/replaced_from_vanilla_buildings_l_polish.yml
+++ b/localisation/polish/replace/replaced_from_vanilla_buildings_l_polish.yml
@@ -1,10 +1,10 @@
 ﻿l_polish:
  industrial_complex: "Przemysł cywilny"
  industrial_complex_plural: "Przemysł cywilny"
- industrial_complex_desc: "Budynek ten zapewnia państwu przemysł do produkcji dóbr cywilnych lub budowy nowych budynków. W razie potrzeby można go przekształcić w przemysł wojskowy.\n\nZapewnia stanowi:\nPodstawowa liczba wymaganych pracowników: §Y360K§!\nPodstawowa produkcja PKB na §YPrzemysł cywilny§!: §§Y20 miliardów dolarów§!\nPodstawowe zużycie energii: § _5_2 GW"
+ industrial_complex_desc: "Budynek ten zapewnia państwu przemysł do produkcji dóbr cywilnych lub budowy nowych budynków. W razie potrzeby można go przekształcić w przemysł wojskowy.\n\nZapewnia stanowi:\nPodstawowa liczba wymaganych pracowników: §Y360K§!\nPodstawowa produkcja PKB na §YPrzemysł cywilny§!: §§Y20 miliardów dolarów§!\nPodstawowe zużycie energii: §R-0.4§! GW\n"
  arms_factory: "Przemysł militarny"
  arms_factory_plural: "Przemysły Wojskowe"
- arms_factory_desc: "Budynek ten zapewnia państwu przemysł do produkcji nowego sprzętu wojskowego. W razie potrzeby można go przekształcić w przemysł cywilny.\n\nZapewnia stanowi:\nPodstawowa liczba wymaganych pracowników: §Y25K§!\nPodstawowa produkcja PKB na §YPrzemysł wojskowy§!: $§Y1 miliardów§!\nPodstawowe zużycie energii: § _5_2 GW"
+ arms_factory_desc: "Budynek ten zapewnia państwu przemysł do produkcji nowego sprzętu wojskowego. W razie potrzeby można go przekształcić w przemysł cywilny.\n\nZapewnia stanowi:\nPodstawowa liczba wymaganych pracowników: §Y25K§!\nPodstawowa produkcja PKB na §YPrzemysł wojskowy§!: $§Y1 miliardów§!\nPodstawowe zużycie energii: §R-0.4§! GW"
  infrastructure: "Infrastruktura"
  infrastructure_plural: "Infrastruktura"
  infrastructure_desc: "Ten budynek zwiększa poziom infrastruktury regionu, co umożliwia sprawniejsze przerzucanie zaopatrzenia i przemieszczanie dywizji, a także zwiększa ilość wydobywanych surowców naturalnych."
