--- a/localisation/polish/tank_modules_l_polish.yml
+++ b/localisation/polish/tank_modules_l_polish.yml
@@ -442,7 +442,7 @@
  tank_torsion_bar_suspension: "Zawieszenie z drążkiem skrętnym"
  tank_torsion_bar_suspension_desc: "Standardowy system zawieszenia zbiorników. Pręty połączone z kołami jezdnymi są połączone z poziomym drążkiem. Gdy koła poruszają się w górę i w dół, drążek skręca się, działając jak sprężyna zawieszenia.\n\n§GWskazówka dla projektanta: jest to standardowa bezpieczna opcja o niskim ryzyku§!"
  tank_pneumatic_suspension: "Zawieszenie hydropneumatyczne"
- tank_pneumatic_suspension_desc: "W zawieszeniu hydropneumatycznym jako elementy tłumiące zawieszenia stosuje się kombinację płynu hydraulicznego i azotu. Dzięki takiemu zawieszeniu czołg jeździ znacznie płynniej. Wysokość napędu można regulować na bieżąco, a zbiornik posiada możliwość samopoziomowania. Umożliwia to płynniejszy ruch i bardziej stabilne celowanie. Jednak jako system zawieszenia jest trudniejszy w produkcji i konserwacji niż klasyczny system drążków skrętnych.\n\n§GWskazówka projektanta: wyposażenie zbiornika w zawieszenie hydropneumatyczne sprawia, że ​​jest on ogólnie lepszy kosztem niezawodności i kosztów produkcji§ _1"
+ tank_pneumatic_suspension_desc: "W zawieszeniu hydropneumatycznym jako elementy tłumiące zawieszenia stosuje się kombinację płynu hydraulicznego i azotu. Dzięki takiemu zawieszeniu czołg jeździ znacznie płynniej. Wysokość napędu można regulować na bieżąco, a zbiornik posiada możliwość samopoziomowania. Umożliwia to płynniejszy ruch i bardziej stabilne celowanie. Jednak jako system zawieszenia jest trudniejszy w produkcji i konserwacji niż klasyczny system drążków skrętnych.\n\n§GWskazówka projektanta: wyposażenie zbiornika w zawieszenie hydropneumatyczne sprawia, że ​​jest on ogólnie lepszy kosztem niezawodności i kosztów produkcji§!"
  tank_steel_armor_gen1: "Wczesna zbroja stalowa"
  tank_steel_armor_gen1_desc: "Wcześnie walcowany jednorodny pancerz (RHA) używany w czołgach podstawowych pierwszej generacji.\n\n§GWskazówka projektanta: Pancerz stalowy to niskobudżetowa opcja pancerza dla czołgów. Nie wytrzyma nowoczesnego pancerza kompozytowego§!"
  tank_steel_armor_gen2: "Ulepszony pancerz stalowy"
@@ -484,7 +484,7 @@
  spaced_armor_gen3: "Nowoczesny pancerz dystansowy"
  spaced_armor_gen3_desc: "Dzięki dodatkowym płytom ceramicznym i różnym kształtom możemy poprawić ogólną ochronę pancerza naszych pojazdów.\n\n§GWskazówka projektanta: Pancerz przestrzenny to tańsza wersja pancerza reaktywnego wybuchowego, która zapewnia Twojemu czołgowi większą ochronę§!"
  additional_machine_guns: "Ciężki karabin maszynowy montowany na górze"
- additional_machine_guns_desc: "Ciężki karabin maszynowy zamontowany na szczycie wieży. Przeznaczony głównie do ograniczonych zadań przeciwlotniczych, ale w razie potrzeby można go również użyć przeciwko celom naziemnym.\n\n§GWskazówka projektanta: dodanie ciężkiego karabinu maszynowego to tani sposób na nieznaczne zwiększenie pojemności czołgów przeciwko wrogim samolotom i celom miękkim§ _1"
+ additional_machine_guns_desc: "Ciężki karabin maszynowy zamontowany na szczycie wieży. Przeznaczony głównie do ograniczonych zadań przeciwlotniczych, ale w razie potrzeby można go również użyć przeciwko celom naziemnym.\n\n§GWskazówka projektanta: dodanie ciężkiego karabinu maszynowego to tani sposób na nieznaczne zwiększenie pojemności czołgów przeciwko wrogim samolotom i celom miękkim§!"
  wet_ammo_storage: "Panele wydmuchowe"
  wet_ammo_storage_desc: "W przypadku katastrofalnego w skutkach wybuchu amunicji dobrze jest zaprojektować czołg mając na uwadze określone słabe punkty. W ten sposób wybuch zostanie skierowany na zewnątrz czołgu, a nie do przedziału załogi.\n\n§GWskazówka dla projektanta: wydmuch to dobry sposób na poprawę przeżywalności czołgu§!"
  automatic_loading: "System automatycznego ładowania"
@@ -514,7 +514,7 @@
  aa_launchers_gen3: "Nowoczesny SAM montowany na czołgu"
  aa_launchers_gen3_desc: "Dzięki systemowi naprowadzania na podczerwień ze skanerem rozetowym nasze pociski będą tylko bardziej zabójcze.\n\n§GWskazówka projektanta: wyposażając nasze czołgi w zamontowaną na wieży wyrzutnię rakiet przeciwlotniczych, zapewnimy sobie pewną ochronę przed samolotami wroga§!"
  aa_launchers_gen4: "Zaawansowany SAM montowany na czołgu"
- aa_launchers_gen4_desc: "Bardziej śmiercionośna głowica rakiety przeciwlotniczej pozwoli nam strzelać do jeszcze większych celów.\n\n§GWskazówka projektanta: wyposażając nasze czołgi w zamontowaną na wieży wyrzutnię rakiet przeciwlotniczych, uzyskamy pewną ochronę przed samolotami wroga§ _1"
+ aa_launchers_gen4_desc: "Bardziej śmiercionośna głowica rakiety przeciwlotniczej pozwoli nam strzelać do jeszcze większych celów.\n\n§GWskazówka projektanta: wyposażając nasze czołgi w zamontowaną na wieży wyrzutnię rakiet przeciwlotniczych, uzyskamy pewną ochronę przed samolotami wroga§!"
  aa_launchers_gen5: "Przyszły SAM montowany na czołgu"
  aa_launchers_gen5_desc: "Wysoce zaawansowany czujnik IGA i prędkość naddźwiękowa sprawiają, że ten pocisk znajdzie swój cel, gdziekolwiek się znajduje.\n\n§GWskazówka projektanta: wyposażając nasze czołgi w zamontowaną na wieży wyrzutnię rakiet przeciwlotniczych, zapewnimy pewną ochronę przed samolotami wroga §!"
  tank_longer_gun: "Przedłużenie lufy"
