--- a/localisation/polish/MD_focus_ARM_l_polish.yml
+++ b/localisation/polish/MD_focus_ARM_l_polish.yml
@@ -1167,7 +1167,7 @@
  ARM_nikol_total_TT: "§YBezpieczeństwo rządowe stanie się większym priorytetem§!"
  ARM_razes_op_TT: "§YDopuszczenie sprzeciwu może wywołać niepokoje społeczne§!"
  ARM_wolfsheeps_TT: "§YLAFD§!"
- ARM_arrest_clear_TT: "§ Aresztujemy wielu ormiańskich oligarchów starej gwardii §!"
+ ARM_arrest_clear_TT: "§YAresztujemy wielu starych gwardzistów ormiańskich§!"
  ARM_iskander_TT: "§GRRosja da nam 4 rakiety Iskander§!"
  ARM_unite_clubs_TT: "§YBędziemy się starali zjednoczyć Zachód i Wschód przeciwko Turcji§!"
  ARM_zapret_propov_TT: "§YZakażemy wszelkiego rodzaju pogańskich kaznodziejstw§!"
