--- a/localisation/polish/MD_focus_HEZ_l_polish.yml
+++ b/localisation/polish/MD_focus_HEZ_l_polish.yml
@@ -59,7 +59,7 @@
  rushdie_dies_tooltip: "§RLos Rushdiego zostanie rozstrzygnięty. Teraz.§!\n Im wyższy nasz §YWywiad cywilny§! jest na Stany Zjednoczone, tym większe mamy szanse na sukces."
  rushdie_dies_tooltip_nodlc: "§RLos Rushdiego zostanie rozstrzygnięty. Teraz.§!\n Im większy nasz §YWpływ§! jest na Stany Zjednoczone, tym większe mamy szanse na sukces."
  HEZ_assasination_of_salman_rushdie: "Zabójstwo Salmana Rushdiego"
- rushdie_dies2_tooltip: "§ Ukrywający się człowiek jest już wolny od konsekwencji swoich grzechów...§!"
+ rushdie_dies2_tooltip: "§ Człowiek w ukryciu jest teraz wolny od konsekwencji swoich grzechów...§!"
  rushdie_survives_tooltip: "§ Sukinsynu żyje, ale za cenę swojego życia...§!"
  HEZ_The_End: "§GKoniec§!"
  HEZ_The_End_desc: "Po wielu poświęceniach i inwestycjach w południowo-zachodniej Azji mamy teraz najlepszą okazję, aby poważnie zranić saudyjską bestię. Ci wahabiccy oportuniści powinni zobaczyć, że ich pieniądze są niczym, kiedy my istniejemy. Dlaczego? Ponieważ jeśli usuniemy „bezpieczeństwo” stolicy Arabii Saudyjskiej, nikt nigdy nie pomyśli o „inwestycji” w miejsce, które będzie co tydzień bombardowane przez Hezbollah i jego sojuszników. Miliardy dolarów znikną, TERAZ!"
@@ -77,7 +77,7 @@
  HEZ_Badr_in_the_shadows: "Badr w cieniu"
  HEZ_Badr_in_the_shadows_desc: "Armia Badr, jedna z najstarszych szyickich organizacji wojskowych i politycznych w Iraku, pilnie pomaga nam i naszym irańskim braciom. Teraz, w obliczu ogromnych napięć między Saddamem a Stanami Zjednoczonymi w Iraku, faktycznie możemy mieć bardzo dobrą okazję do wzmocnienia wpływów partii szyickich, a nie tylko armii Badr, w całym Iraku i poza nim!"
  HEZ_For_Allah_Islam_and_Zeinabyah: "§RZa Allaha, islam i Zeinabyah!§!"
- HEZ_For_Allah_Islam_and_Zeinabyah_desc: "Zaatakujemy naszych wrogów flagą Imama Hussaina! Musimy iść chronić świątynię Zaynab, nawet jeśli wrogowie odetną nam głowy... §RWami też musimy iść... tylko po to, aby poświęcić się w imię ochrony Ahlul Bayt...§ !"
+ HEZ_For_Allah_Islam_and_Zeinabyah_desc: "Zaatakujemy naszych wrogów pod flagą Imama Husajna! Musimy iść chronić sanktuarium Zaynab, nawet jeśli nasi wrogowie zetną nam głowy... §RMusimy iść również... po prostu poświęcić się w celu ochrony Ahlul Bayt...§!"
  HEZ_Negotiations_for_Intervention: "Negocjacje w sprawie interwencji"
  HEZ_Negotiations_for_Intervention_desc: "Nie możemy i nie pozwolimy na żadne zagrożenie ze strony wahabitów! Zmobilizujemy wszystkie nasze siły do ​​walki z wahabicką bestią! Nie okażemy żadnej litości tyranowi wahabitom! Wykorzystamy całą naszą siłę dyplomatyczną i militarną, aby zniszczyć fałszywe Państwo Islamskie. Skończymy z tym zagrożeniem raz na zawsze..."
  HEZ_call_to_arms: "Wezwanie do broni"
@@ -137,9 +137,9 @@
  HEZ_Request_Election_funds: "Poproś o fundusze wyborcze"
  HEZ_Request_Election_funds_desc: "Chociaż robimy wiele rzeczy, aby zabezpieczyć naszą pozycję, nadal potrzebujemy jednego sponsora dla naszej sprawy i jak zawsze tym sponsorem jest Islamska Republika Iranu. Na pewno nam pomogą i będą nas wspierać w procesie zjednoczenia Libanu. Dlaczego? Bo jeśli Liban zjednoczy się pod sztandarem Hezbollahu, §YA państwo w państwie stanie się krajem dla siebie.§!"
  HEZ_Shias_Lebanon: "Liban dla Libańczyków!"
- HEZ_Shias_Lebanon_desc: "Wszystko jest gotowe. Zrobiliśmy wszystko, co mogliśmy, a teraz nadszedł czas, aby odebrać nagrodę. Liban będzie zjednoczony i całkowicie wymknie się z rąk jakiejkolwiek potęgi imperialistycznej. § Po zabezpieczeniu Libanu ruch oporu wykona ogromny krok w stronę ostatecznej wojny, wielkiej próby dla niewiernych i wyzwolenia uciskanych.§!"
+ HEZ_Shias_Lebanon_desc: "Wszystko jest gotowe. Zrobiliśmy wszystko, co mogliśmy, a teraz nadszedł czas, aby odebrać nagrodę. Liban będzie zjednoczony i całkowicie wymknie się z rąk jakiejkolwiek potęgi imperialistycznej. §YPo zabezpieczeniu Libanu ruch oporu wykona ogromny krok w stronę ostatecznej wojny, wielkiej próby dla niewiernych i wyzwolenia uciskanych.§!"
  HEZ_maintain_status_quo: "Utrzymaj status quo"
- HEZ_maintain_status_quo_desc: "Choć naszym pierwotnym celem było zjednoczenie Libanu pod sztandarem Hezbollahu, wydaje się, że coś takiego nie jest potrzebne. Zdominowaliśmy libańską politykę i nie ma potrzeby, aby sami dosłownie przejmować kontrolę nad całym Libanem. Zamiast tego będziemy nadzorować działania polityczne toczące się w całym kraju. W ten sposób nie ma potrzeby tak wielu politycznych wbijania noży w plecy naszej organizacji, podczas gdy nasza dominacja polityczna jest zabezpieczona w rządzie libańskim, a możemy nawet mieć dobry wizerunek publiczny, jeśli pozwolimy, aby „demokratyczny” rząd podjął działania tuż obok do nas. W ten sposób skupiamy się bardziej na własnej populacji szyickiej i interesach Osi Oporu. § Jednak mimo tego wszystkiego nasza silna ręka w Libanie pozostanie na nim na zawsze!"
+ HEZ_maintain_status_quo_desc: "Choć naszym pierwotnym celem było zjednoczenie Libanu pod sztandarem Hezbollahu, wydaje się, że coś takiego nie jest potrzebne. Zdominowaliśmy libańską politykę i nie ma potrzeby, aby sami dosłownie przejmować kontrolę nad całym Libanem. Zamiast tego będziemy nadzorować działania polityczne toczące się w całym kraju. W ten sposób nie ma potrzeby tak wielu politycznych wbijania noży w plecy naszej organizacji, podczas gdy nasza dominacja polityczna jest zabezpieczona w rządzie libańskim, a możemy nawet mieć dobry wizerunek publiczny, jeśli pozwolimy, aby „demokratyczny” rząd podjął działania tuż obok do nas. W ten sposób skupiamy się bardziej na własnej populacji szyickiej i interesach Osi Oporu. §YJednak mimo tego wszystkiego nasza silna ręka w Libanie pozostanie na nim na zawsze!§!"
  HEZ_Industry: "Hezbollah i przemysł"
  HEZ_Industry_desc: "Sektor przemysłowy ma ogromne znaczenie dla zrównoważonego rozwoju Hezbollahu."
  HEZ_Hezbollahs_independent_industry: "Niezależny przemysł Hezbollahu"
