--- a/localisation/polish/MD_focus_IND_l_polish.yml
+++ b/localisation/polish/MD_focus_IND_l_polish.yml
@@ -679,7 +679,7 @@
  IND_ethnic_tension: "Szalejące napięcie etniczne"
  IND_ethnic_tension_desc: "Indonezja to duży, zróżnicowany kraj i dlatego wśród naszych obywateli są kłopoty. Stwarza to dla nas wiele problemów politycznych i społecznych, którymi należy się zająć"
  IND_aceh_in_turmoil: "Aceh w zamieszaniu!"
- IND_aceh_in_turmoil_desc: "Od 1976 r. w Aceh panuje chaos i bunt, co powoduje niestabilność naszego narodu i niepotrzebny rozlew krwi. Nasze wojsko jest zbyt skupione na rozprawieniu się z tymi powstańcami, co powoduje, że pozostajemy w tyle militarnie\n§W-------------§!\nTen duch narodowy zostanie §RRusunięty§ ! jeśli §Hzaprzestaniemy ognia z Acehu w 2004§!."
+ IND_aceh_in_turmoil_desc: "Aceh znajduje się w stanie chaosu i buntu od 1976 roku, co powoduje niestabilność naszego kraju i niepotrzebne rozlewanie krwi. Nasze siły zbrojne są zbyt skoncentrowane na walce z tymi partyzantami, co powoduje, że militarnie zostajemy w tyle.\n§W--------------§!\nTen Narodowy Ducha zostanie §Rusunięty§!, jeśli §Hzawarcie rozejmu z Aceh w 2004 roku§!."
  IND_rupiah_crisis: "Kryzys rupii"
  IND_rupiah_crisis_desc: "Rupia, waluta naszego kraju, jest poważnie słaba. Jest to wynik dziesięcioleci korupcji i złego zarządzania. Najwyższy czas, aby to naprawić i przywrócić naszą gospodarkę na arenę światową"
  IND_popular_tourist_destination: "Popularny cel turystyczny"
