--- a/localisation/polish/MD_focus_ITA_l_polish.yml
+++ b/localisation/polish/MD_focus_ITA_l_polish.yml
@@ -1653,7 +1653,7 @@
  mafia.5.o2: "Nie mamy na to czasu."
  mafia.5.o3: "Wykorzystaj nadzwyczajne fundusze"
  mafia.6.t: "Nielegalne wysypisko śmieci"
- mafia.6.d: "W §0Kampanii§ odkryto kolejne nielegalne wysypisko. Nie oczyszczone wycieki substancji toksycznych spowodowały skażenie wody do nawadniania w pobliżu pól uprawnych. §0Kamora§! jest głównym podejrzanym."
+ mafia.6.d: "Odkryto kolejne nielegalne wysypisko śmieci w §0Kampanii§!. Nieużytkowane toksyczne wycieki zanieczyściły wodę do irygacji w pobliżu pól uprawnych. Głównym podejrzanym jest §0Camorra§!."
  mafia.6.o1: "Powinniśmy sobie z tym poradzić."
  mafia.6.o2: "Nie mamy na to czasu."
  mafia.6.o3: "Wykorzystaj nadzwyczajne fundusze"
