--- a/localisation/polish/MD_focus_SOV_l_polish.yml
+++ b/localisation/polish/MD_focus_SOV_l_polish.yml
@@ -1723,7 +1723,7 @@
  SOV_npp_again_tt: "$SOV_npp_modifier_tt_intro$\n$MODIFIER_production_speed_arms_factory_factor$: §G+5,00%§!\n$bureaucracy_cost_multiplier_modifier$: §R+3,00%§!$MODIFIER_RESEARCH_SPEED_FACTOR$: §G+3,00%§!\n$modifier_production_speed_offices_factor$ : §G+5.00 %§!\n$education_cost_multiplier_modifier$: §R+3,00%§!\n$MODIFIER_RESEARCH_SPEED_FACTOR$: §G+7,00%§!\n$education_cost_multiplier_modifier$: §R+4,00%§!$MODIFIER_GLOBAL_MONTHLY_POPULATION$: §G+3,00 %§!\n$health_cost_multiplier_modifier$: §R+5,00%§!\n\n"
  SOV_500_days_modifier: "Wzrost gospodarczy z programu 500 dni"
  SOV_500_days_modifier_tt_intro: "Zmodyfikuj §Y$SOV_500_days_modifier$§! przez"
- SOV_500_days_one_tt: "Dodaj §Y$SOV_500_days_modifier$§!, co zapewnia:\n$modifier_production_speed_offices_factor$: §G+5,00%§!\n$MODIFIER_PRODUCTION_SPEED_BUILDINGS_FACTOR$: §G+5,00%§!\n$MODIFIER_STABILITY_FACTOR$: §G+7,00%§ !\n\n"
+ SOV_500_days_one_tt: "Dodaj §Y$SOV_500_days_modifier$§!, co zapewnia:\n$modifier_production_speed_offices_factor$: §G+5,00%§!\n$MODIFIER_PRODUCTION_SPEED_BUILDINGS_FACTOR$: §G+5,00%§!\n$MODIFIER_STABILITY_FACTOR$: §G+7,00%§!\n\n"
  SOV_500_days_two_tt: "$SOV_500_days_modifier_tt_intro$\n$tax_gain_multiplier_modifier$: §G+10,00%§!\n$MODIFIER_CONSUMER_GOODS_FACTOR$: §Y-6,0%§!\n$MODIFIER_STABILITY_FACTOR$: §G+3,00%§!\n\n"
  SOV_500_days_three_tt: "$SOV_500_days_modifier_tt_intro$\n$health_cost_multiplier_modifier$: §R+10,00%§!\n$education_cost_multiplier_modifier$: §R+5,00%§!\n$projects_cost_modifier$: §G-4,00%§!\n\n"
  SOV_500_days_four_tt: "$SOV_500_days_modifier_tt_intro$\n$productivity_growth_modifier$: §G+0.06§!\n$econ_cycle_upg_cost_multiplier_modifier$: §G-5.00%§!\n$MODIFIER_STABILITY_FACTOR$: §G+5.00%§!\n\n"
@@ -1751,11 +1751,11 @@
  SOV_just_inner19_tt: "$SOV_just_inner_modifier_tt_intro$\n$MODIFIER_STABILITY_FACTOR$: §G+1,00%§!\n$MODIFIER_WAR_SUPPORT_FACTOR$: §G+2,00%§!\n\n"
  SOV_just_inner20_tt: "$SOV_just_inner_modifier_tt_intro$\n$communism_drift$: §G+0.02§!\n$neutrality_drift$: §R+0.01§!\n$MODIFIER_STABILITY_FACTOR$: §G-2.00%§!\n\n"
  SOV_just_inner21_tt: "$SOV_just_inner_modifier_tt_intro$\n$agricolture_productivity_modifier$: §G+12,00%§!\n$bureaucracy_cost_multiplier_modifier$: §R+21,00%§!\n$agriculture_tax_modifier$: §G+20,00%§!\n\n"
- SOV_just_inner22_tt: "$ Sov_Just_inner_modifier_tt_intro $ \ n $ corporate_tax_income_multiplier_modifier $: §g+12,00% §! \ N \ n"
+ SOV_just_inner22_tt: "$SOV_just_inner_modifier_tt_intro$\n$corporate_tax_income_multiplier_modifier$: §G+12.00%§!\n$bureaucracy_cost_multiplier_modifier$: §R+10.00%§!\n$MODIFIER_PRODUCTION_SPEED_BUILDINGS_FACTOR$: §G+6.00%§!\n\n"
  SOV_just_inner23_tt: "$SOV_just_inner_modifier_tt_intro$\n$communism_drift$: §G+0.01§!\n\n"
  SOV_rus_empire_inner_modifier: "Polityka wewnętrzna Imperium Rosyjskiego"
  SOV_rus_empire_inner_modifier_tt_intro: "Zmodyfikuj §Y$SOV_rus_empire_inner_modifier$§! przez"
- SOV_rus_empire_inner_start_tt: "Dodaj §Y$SOV_rus_empire_inner_modifier$§!, co daje:\n$nationalist_drift$: §G+0,03%§!\n$MODIFIER_DRIFT_DEFENCE_FACTOR$: §G+3,00%§!\n$MODIFIER_CONSCRIPTION_FACTOR$: §G+5,00%§ !\n$MODIFIER_POLITICAL_POWER_FACTOR$: §G+3,00%§!\n\n"
+ SOV_rus_empire_inner_start_tt: "Dodaj §Y$SOV_rus_empire_inner_modifier$§!, co daje:\n$nationalist_drift$: §G+0,03%§!\n$MODIFIER_DRIFT_DEFENCE_FACTOR$: §G+3,00%§!\n$MODIFIER_CONSCRIPTION_FACTOR$: §G+5,00%§!\n$MODIFIER_POLITICAL_POWER_FACTOR$: §G+3,00%§!\n\n"
  SOV_rus_empire_inner1_tt: "$SOV_rus_empire_inner_modifier_tt_intro$\n$nationalist_drift$: §G+0,05%§!\n$MODIFIERS_ARMY_ATTACK_FACTOR$: §G+5,00%§!\n\n"
  SOV_rus_empire_inner2_tt: "$SOV_rus_empire_inner_modifier_tt_intro$\n$nationalist_drift$: §G+0,02%§!\n$MODIFIER_STABILITY_FACTOR$: §G+3,00%§!\n\n"
  SOV_rus_empire_inner3_tt: "$SOV_rus_empire_inner_modifier_tt_intro$\n$nationalist_drift$: §G+0,02%§!\n$MODIFIER_DRIFT_DEFENCE_FACTOR$: §G+20,00%§!\n$MODIFIER_POLITICAL_POWER_FACTOR$: §G+25,00%§!\n\n"
@@ -1827,7 +1827,7 @@
  SOV_rosgvardia_modifier: "Gwardia Narodowa Rosji"
  SOV_rosgvardia_modifier_desc: "Gwardia Narodowa Rosji to wewnętrzne siły wojskowe Rosji, składające się z niezależnej agencji, która podlega bezpośrednio Prezydentowi Rosji w ramach jego uprawnień jako Naczelnego Wodza i Przewodniczącego Rady Bezpieczeństwa. Gwardia Narodowa jest odrębna od Rosyjskiej Siły Zbrojnej Siły."
  SOV_rosgvardia_modifier_tt_intro: "Zmodyfikuj §Y$SOV_rosgvardia_modifier$§! przez"
- SOV_rosgvardia_start_tt: "Dodaj §Y$SOV_rosgvardia_modifier$§!, co zapewnia:\n$MODIFIER_ROOT_OUT_RESISTANCE_EFFECTIVENESS_FACTOR$: §G+20,00%§!\n$MODIFIER_FOREIGN_SUBVERSIVE_ACTIVITIES$: §G-15,00%§!\n$police_cost_multiplier_modifier$: %§ !\n\n"
+ SOV_rosgvardia_start_tt: "Dodaj §Y$SOV_rosgvardia_modifier$§!, co zapewnia:\n$MODIFIER_ROOT_OUT_RESISTANCE_EFFECTIVENESS_FACTOR$: §G+20,00%§!\n$MODIFIER_FOREIGN_SUBVERSIVE_ACTIVITIES$: §G-15,00%§!\n$police_cost_multiplier_modifier$: §R+10.00%§! \n\n"
  SOV_rosgvardia1_tt: "$SOV_rosgvardia_modifier_tt_intro$\n$MODIFIER_ROOT_OUT_RESISTANCE_EFFECTIVENESS_FACTOR$: §G+5,00%§!\n$MODIFIER_FOREIGN_SUBVERSIVE_ACTIVITIES$: §G-5,00%§!\n\n"
  SOV_rosgvardia2_tt: "$SOV_rosgvardia_modifier_tt_intro$\n$MODIFIER_RESISTANCE_GROWTH$: §G-5,00%§!\n$ENEMY_OPERATIVE_DETECTION_CHANCE_FACTOR$: §G+10,00%§!\n\n"
  SOV_rosgvardia3_tt: "$SOV_rosgvardia_modifier_tt_intro$\n$MODIFIER_RESISTANCE_GROWTH$: §G-10,00%§!\n$MODIFIER_RESISTANCE_DAMAGE_TO_GARRISONS$: §G-5,00%§!\n$police_cost_multiplier_modifier$: §R+7,00%§!\n\n"
@@ -1835,7 +1835,7 @@
  SOV_wagner_politic_modifier: "Polityka Rosji Wagnera"
  SOV_wagner_politic_modifier_desc: "\n\n£idea_SOV_wagner_politic_desc_picture\n\n\n\n Rosja pod rządami PMC Wagnera ma swoje unikalne cechy. Nacisk na militaryzm, wyodrębnienie wagnerystów jako elity Rosji i przekształcenie rosyjskich mieszkańców w żołnierzy przyszłej wojny światowej."
  SOV_wagner_politic_modifier_tt_intro: "Zmodyfikuj §Y$SOV_wagner_politic_modifier$§! przez"
- SOV_wagner_politic_start_tt: "Dodaj §Y$SOV_wagner_politic_modifier$§!, co daje:\n$MODIFIER_POLITICAL_POWER_FACTOR$: §G+5,00%§!\n$MODIFIER_DRIFT_DEFENCE_FACTOR$: §G+7,00%§!\n$nationalist_drift$: §G+0,03%§ !\n$MODIFIER_STABILITY_FACTOR$: §R-5,00%§!\n\n"
+ SOV_wagner_politic_start_tt: "Dodaj §Y$SOV_wagner_politic_modifier$§!, co daje:\n$MODIFIER_POLITICAL_POWER_FACTOR$: §G+5,00%§!\n$MODIFIER_DRIFT_DEFENCE_FACTOR$: §G+7,00%§!\n$nationalist_drift$: §G+0,03%§!\n$MODIFIER_STABILITY_FACTOR$: §R-5,00%§!\n\n"
  SOV_wagner_politic1_tt: "$SOV_wagner_politic_modifier_tt_intro$\n$MODIFIER_POLITICAL_POWER_FACTOR$: §G+1,00%§! \n$MODIFIER_DRIFT_DEFENCE_FACTOR$: §G+1,00%§!\n$nationalist_drift$: §G+0,02%§!\n$MODIFIER_STABILITY_FACTOR$: §R-2,00%§! \n$MODIFIER_CONVERSION_COST_CIV_TO_MIL_FACTOR$: §R-30,00%§!\n\n"
  SOV_wagner_politic2_tt: "$SOV_wagner_politic_modifier_tt_intro$\n$MODIFIER_DRIFT_DEFENCE_FACTOR$: §G+1,00%§!\n$MODIFIER_STABILITY_FACTOR$: §R-2,00%§!\n$MODIFIER_CONSCRIPTION_FACTOR$: §G+5,00%§!\n\n"
  SOV_wagner_politic3_tt: "$SOV_wagner_politic_modifier_tt_intro$\n$MODIFIER_DRIFT_DEFENCE_FACTOR$: §G+1,00%§!\n$MODIFIER_SEND_VOLUNTEERS_TENSION_LIMIT$: §G-30,00%§!\n\n"
@@ -1844,8 +1844,8 @@
  WAG_wagner_politic_modifier: "Polityka wagnerowska"
  WAG_wagner_politic_modifier_desc: "Państwo pod kontrolą skazańca oligarchy jest zjawiskiem wyjątkowym w historii świata. Prigożin skupia się na chwaleniu PMC Wagnera i uczynieniu z nich najlepszej jednostki bojowej w swoim kraju."
  WAG_wagner_politic_modifier_tt_intro: "Zmodyfikuj §Y$WAG_wagner_politic_modifier$§! przez"
- WAG_wagner_politic_start_tt: "Dodaj §Y$WAG_wagner_politic_modifier$§!, co daje:\n$MODIFIER_POLITICAL_POWER_FACTOR$: §G+5,00%§!\n$MODIFIER_DRIFT_DEFENCE_FACTOR$: §G+7,00%§!\n$nationalist_drift$: §G+0,03%§ !\n$MODIFIER_STABILITY_FACTOR$: §R-5,00%§!\n\n"
- WAG_wagner_politic1_tt: "$ WAG_WAGNER_POLITIC_MODIFIER_TT_INTRO $ \ n $ modyfier_political_power_factor $: §g+1,00%§! \ N $ modyfir_drift_defence_factor $: §g+1,00%§! -2,00%§!\n$MODIFIER_CONVERSION_COST_CIV_TO_MIL_FACTOR$: §R-30,00%§!\n\n"
+ WAG_wagner_politic_start_tt: "Dodaj §Y$WAG_wagner_politic_modifier$§!, co daje:\n$MODIFIER_POLITICAL_POWER_FACTOR$: §G+5,00%§!\n$MODIFIER_DRIFT_DEFENCE_FACTOR$: §G+7,00%§!\n$nationalist_drift$: §G+0,03%§!\n$MODIFIER_STABILITY_FACTOR$: §R-5,00%§!\n\n"
+ WAG_wagner_politic1_tt: "$WAG_wagner_politic_modifier_tt_intro$\n$MODIFIER_POLITICAL_POWER_FACTOR$: §G+1.00%§!\n$MODIFIER_DRIFT_DEFENCE_FACTOR$: §G+1.00%§!\n$nationalist_drift$: §G+0.02%§!\n$MODIFIER_STABILITY_FACTOR$: §R-2.00%§!\n$MODIFIER_CONVERSION_COST_CIV_TO_MIL_FACTOR$: §R-30.00%§!\n\n"
  WAG_wagner_politic2_tt: "$WAG_wagner_politic_modifier_tt_intro$\n$MODIFIER_DRIFT_DEFENCE_FACTOR$: §G+1,00%§!\n$MODIFIER_STABILITY_FACTOR$: §R-2,00%§!\n$MODIFIER_CONSCRIPTION_FACTOR$: §G+5,00%§!\n\n"
  WAG_wagner_politic3_tt: "$WAG_wagner_politic_modifier_tt_intro$\n$MODIFIER_DRIFT_DEFENCE_FACTOR$: §G+1,00%§!\n$MODIFIER_SEND_VOLUNTEERS_TENSION_LIMIT$: §G-30,00%§!\n\n"
  WAG_wagner_politic4_tt: "$WAG_wagner_politic_modifier_tt_intro$\n$MODIFIER_DRIFT_DEFENCE_FACTOR$: §G+1,00%§!\n$nationalist_drift$: §G+0,03%§!\n$MODIFIER_CONSCRIPTION_FACTOR$: §G+1,00%§!\n\n"
@@ -1856,7 +1856,7 @@
  SOV_koba_politic_modifier: "Pojęcie bezpieczeństwa publicznego"
  SOV_koba_politic_modifier_desc: "Koncepcja bezpieczeństwa publicznego pozwala zrozumieć, dlaczego jesteśmy szczęśliwi, a nie, szczęśliwi lub chorzy, dlaczego ktoś ma szczęście, a ktoś nie, i jak na to wpływać. To odpowiedzi na pytania: co jest dobre, a co złe, czym jest wstyd i sumienie, czym jest intuicja i dlaczego jedni jej słuchają, a inni nie i czy naprawdę trudno jest odmienić los?"
  SOV_koba_politic_modifier_tt_intro: "Zmodyfikuj §Y$SOV_koba_politic_modifier$§! przez"
- SOV_koba_politic_start_tt: "Dodaj §Y$SOV_koba_politic_modifier$§!, co daje:\n$MODIFIER_POLITICAL_POWER_FACTOR$: §G+5,00%§!\n$nationalist_drift$: §G+0,03%§!\n$MODIFIER_STABILITY_FACTOR$: §R-5,00%§ !\n\n"
+ SOV_koba_politic_start_tt: "Dodaj §Y$SOV_koba_politic_modifier$§!, co daje:\n$MODIFIER_POLITICAL_POWER_FACTOR$: §G+5,00%§!\n$nationalist_drift$: §G+0,03%§!\n$MODIFIER_STABILITY_FACTOR$: §R-5,00%§!\n\n"
  SOV_koba_politic1_tt: "$SOV_koba_politic_modifier_tt_intro$\n$MODIFIER_POLITICAL_POWER_FACTOR$: §G+1.00%§!\n$nationalist_drift$: §G+0.01%§!\n$MODIFIER_STABILITY_FACTOR$: §G+1.00%§!\n$police_cost_multiplier_modifier$: §R +3,00%§!\n\n"
  SOV_koba_politic2_tt: "$SOV_koba_politic_modifier_tt_intro$\n$tax_gain_multiplier_modifier$: §G+9,00%§!\n\n"
  SOV_koba_politic3_tt: "$SOV_koba_politic_modifier_tt_intro$\n$MODIFIER_POLITICAL_POWER_FACTOR$: §G+2,00%§!\n$nationalist_drift$: §G+0,02%§!\n$MODIFIER_STABILITY_FACTOR$: §G+2,00%§!\n$personnel_cost_multiplier_modifier$: §R +5,00%§!\n\n"
@@ -3134,9 +3134,9 @@
  WAG_SAHEL_democratic: "Konfederacja Sahelu"
  yevgeny_prigozhin_portrait_tooltip: "§YEvgeny Prigozhin§!\n[SOV_prigozhin_leader][SOV_prigozhin_noleader]"
  dmitryi_utkin_portrait_tooltip: "§YDmitryi Utkin§!\n[SOV_utkin_noleader][SOV_utkin_leader]"
- SOV_evgesha_leader: "§YPrzywódca PMC Wagner§!\n - Atak sił specjalnych: §G+10%§!\n\n - Codzienne wsparcie nacjonalistów: §G+0.01§!\n\n - Stabilność: §R-5.00%§ !\N"
+ SOV_evgesha_leader: "§YPrzywódca PMC Wagner§!\n - Atak sił specjalnych: §G+10%§!\n\n - Codzienne wsparcie nacjonalistów: §G+0.01§!\n\n - Stabilność: §R-5.00%§!\n"
  SOV_evgesha_noleader: "Jewgienij Prigożin nie jest przywódcą PMC Wagnera"
- SOV_dima_leader: "§YPrzywódca PMC Wagner§!\n - Atak sił specjalnych: §G+4%§!\n\n - Codzienne wsparcie nacjonalistów: §G+0,05§!\n\n - Stabilność: §R-10,00%§ !\N"
+ SOV_dima_leader: "§YPrzywódca PMC Wagner§!\n - Atak sił specjalnych: §G+4%§!\n\n - Codzienne wsparcie nacjonalistów: §G+0,05§!\n\n - Stabilność: §R-10,00%§!\n"
  SOV_dima_noleader: "Dmitryi Utkin nie jest przywódcą PMC Wagnera"
  our_creator: "Rosyjskie PMC"
  S0V_russian_sphere_idea: "Sfera Rosyjska"
