--- a/localisation/polish/replace/replaced_from_vanilla_diplomacy_l_polish.yml
+++ b/localisation/polish/replace/replaced_from_vanilla_diplomacy_l_polish.yml
@@ -76,7 +76,7 @@
  SEND_VOL_TARGET_AT_WAR:0 "Aby wysłać siły interwencyjne, @$TAG$$WHO|H$ musi być w stanie wojny."
  SEND_VOL_WE_NOT_AT_WAR:1 "Musimy zachować spokój, aby wysłać siły interwencyjne."
  SEND_VOL_SENT_VOL_TO_ENEMY:1 "Wysłaliśmy już siły interwencyjne lub otrzymaliśmy pozwolenie powietrzne od wroga @$TAG$$WHO|H$"
- SEND_VOL_NOT_ENOUGH_DIVISIONS:0 "Potrzebujemy co najmniej § 0 dywizji, aby móc wysłać siły interwencyjne."
+ SEND_VOL_NOT_ENOUGH_DIVISIONS:0 "Potrzebujemy co najmniej $NUM|H$ dywizji, które będą w stanie wysłać siły interwencyjne."
  SEND_VOLUNTEERS_DESCRIPTION:0 "Wyślij $SEND|H$ dywizji.\nMasz $CURRENT|H$ dywizji w siłach interwencyjnych, a twój maksymalny łączny limit wynosi $MAX|H$ (ograniczony przez $LIMITREASON$)."
  SEND_VOLUNTEERS_DESCRIPTION_NO_DIVISIONS:0 "§RMusisz wybrać jedną lub więcej armii, aby wysłać ofertę.§!\nMasz $CURRENT|H$ dywizje w siłach interwencyjnych, a twój maksymalny łączny limit wynosi $MAX|H$ (ograniczony przez $LIMITREASON$)."
  SEND_VOLUNTEERS_DESCRIPTION_NO_DIVISIONS_BUT_PLANES:0 "§RMusisz wybrać jedną lub więcej armii albo wybrać jednostki powietrzne, aby wysłać ofertę.§!\nMasz $CURRENT|H$ dywizje w siłach interwencyjnych, a twój maksymalny łączny limit wynosi $MAX|H$ (ograniczony przez $LIMITREASON$)."
