--- a/localisation/polish/victory_points_l_polish.yml
+++ b/localisation/polish/victory_points_l_polish.yml
@@ -498,7 +498,7 @@
  VICTORY_POINTS_9692: "Bratysława"
  VICTORY_POINTS_541: "Nitra"
  VICTORY_POINTS_3484: "Żylina"
- VICTORY_POINTS_6573: "Koszyce"
+ VICTORY_POINTS_6573: "Košice"
  VICTORY_POINTS_3537: "Bańskiej Bystrzycy"
  VICTORY_POINTS_3581: "Preszów"
  VICTORY_POINTS_9660: "Budapeszt"
@@ -519,7 +519,7 @@
  VICTORY_POINTS_11581: "Zagrzeb"
  VICTORY_POINTS_6647: "Osijek"
  VICTORY_POINTS_9595: "Slavonski Brod"
- VICTORY_POINTS_3924: "Podział"
+ VICTORY_POINTS_3924: "Split"
  VICTORY_POINTS_11564: "Rijeka"
  VICTORY_POINTS_3943: "Zadar"
  VICTORY_POINTS_11735: "Puli"
@@ -541,7 +541,7 @@
  VICTORY_POINTS_3939: "Nowy Pazar"
  VICTORY_POINTS_3609: "Sabac"
  VICTORY_POINTS_6998: "Kruszevac"
- VICTORY_POINTS_11887: "Nisz"
+ VICTORY_POINTS_11887: "Niš"
  VICTORY_POINTS_9906: "Leskovac"
  VICTORY_POINTS_11583: "Smederewo"
  VICTORY_POINTS_388: "Vranje"
@@ -585,10 +585,10 @@
  VICTORY_POINTS_6600: "Bălţi"
  VICTORY_POINTS_13202: "Tyraspol"
  VICTORY_POINTS_9617: "Bukareszt"
- VICTORY_POINTS_657: "Konstanca"
- VICTORY_POINTS_6652: "Krajowa"
+ VICTORY_POINTS_657: "Constanta"
+ VICTORY_POINTS_6652: "Craiova"
  VICTORY_POINTS_3663: "Ploeszti"
- VICTORY_POINTS_11636: "Braila"
+ VICTORY_POINTS_11636: "Brăila"
  VICTORY_POINTS_3639: "Pitesti"
  VICTORY_POINTS_9651: "Buzău"
  VICTORY_POINTS_6711: "Kluż-Napoka"
@@ -733,7 +733,7 @@
  VICTORY_POINTS_8060: "Wadi Al Dawasir"
  VICTORY_POINTS_12883: "Dżudda"
  VICTORY_POINTS_5037: "Mekka"
- VICTORY_POINTS_12758: "Medyna"
+ VICTORY_POINTS_12758: "Medina"
  VICTORY_POINTS_12101: "Tabuk"
  VICTORY_POINTS_10786: "Khamis Mushait"
  VICTORY_POINTS_14430: "Najran"
@@ -1704,7 +1704,7 @@
  VICTORY_POINTS_4554: "Xekong"
  VICTORY_POINTS_1577: "Attapu"
  VICTORY_POINTS_12133: "Czy Tho może"
- VICTORY_POINTS_4223: "Długi Xuyen"
+ VICTORY_POINTS_4223: "Long Xuyen"
  VICTORY_POINTS_4284: "Rach Gia"
  VICTORY_POINTS_4341: "Ca Mau"
  VICTORY_POINTS_7303: "Soc Trang"
@@ -1712,7 +1712,7 @@
  VICTORY_POINTS_4401: "Miasto Ho Chi Minh"
  VICTORY_POINTS_10162: "Nha Trang"
  VICTORY_POINTS_12232: "Vung Tau"
- VICTORY_POINTS_1396: "Mój Tho"
+ VICTORY_POINTS_1396: "My Tho"
  VICTORY_POINTS_10232: "Phan Thiet"
  VICTORY_POINTS_1285: "Phan Rang"
  VICTORY_POINTS_4405: "Tuy Hoa"
@@ -1721,7 +1721,7 @@
  VICTORY_POINTS_7271: "Da łac"
  VICTORY_POINTS_12176: "Bao Loc"
  VICTORY_POINTS_4397: "Vinh"
- VICTORY_POINTS_4379: "Odcień"
+ VICTORY_POINTS_4379: "Hue"
  VICTORY_POINTS_10309: "Da Nang"
  VICTORY_POINTS_4334: "Qui Nhon"
  VICTORY_POINTS_11936: "Dzięki Hoa"
@@ -1731,7 +1731,7 @@
  VICTORY_POINTS_4119: "Hajfong"
  VICTORY_POINTS_1185: "Nam Dinh"
  VICTORY_POINTS_1157: "Ha Long"
- VICTORY_POINTS_9948: "Syn Langa"
+ VICTORY_POINTS_9948: "Lang Son"
  VICTORY_POINTS_4529: "Dien Bien Phu"
  VICTORY_POINTS_1073: "Lao Cai"
  VICTORY_POINTS_12319: "Syn La"
@@ -1749,7 +1749,7 @@
  VICTORY_POINTS_4424: "Johor Bahru"
  VICTORY_POINTS_7427: "Batu Pahat"
  VICTORY_POINTS_6015: "Kuala Lumpur"
- VICTORY_POINTS_1364: "Ipo"
+ VICTORY_POINTS_1364: "Ipoh"
  VICTORY_POINTS_12144: "Alora Setara"
  VICTORY_POINTS_7342: "Sungai Petani"
  VICTORY_POINTS_12215: "Taiping"
@@ -2585,8 +2585,8 @@
  VICTORY_POINTS_11351: "Tambow"
  VICTORY_POINTS_3346: "Jelet"
  VICTORY_POINTS_9367: "Miczurinsk"
- VICTORY_POINTS_275: "Morszańsk"
- VICTORY_POINTS_7375: "Trwała ondulacja"
+ VICTORY_POINTS_275: "Morshansk"
+ VICTORY_POINTS_7375: "Perm"
  VICTORY_POINTS_6278: "Iżewsk"
  VICTORY_POINTS_12527: "Berezniki"
  VICTORY_POINTS_4400: "Sarapul"
@@ -2598,7 +2598,7 @@
  VICTORY_POINTS_9283: "Kudymkar"
  VICTORY_POINTS_9293: "Głazów"
  VICTORY_POINTS_1380: "Czernuszka"
- VICTORY_POINTS_6124: "Kirów"
+ VICTORY_POINTS_6124: "Kirov"
  VICTORY_POINTS_272: "Kirowo-Czepieck"
  VICTORY_POINTS_3177: "Luza"
  VICTORY_POINTS_6288: "Omutnińsk"
@@ -3010,7 +3010,7 @@
  VICTORY_POINTS_7600: "Bajkonur"
  VICTORY_POINTS_4773: "Shu"
  VICTORY_POINTS_7341: "Aktobe"
- VICTORY_POINTS_11537: "Doustny"
+ VICTORY_POINTS_11537: "Oral"
  VICTORY_POINTS_3618: "Atyrau"
  VICTORY_POINTS_11701: "Aktau"
  VICTORY_POINTS_11591: "Kulsary"
@@ -3194,7 +3194,7 @@
  VICTORY_POINTS_7869: "Biały koń"
  VICTORY_POINTS_10527: "Żółty nóż"
  VICTORY_POINTS_2407: "Wysoki poziom"
- VICTORY_POINTS_13075: "Rzeka Siano"
+ VICTORY_POINTS_13075: "Hay River"
  VICTORY_POINTS_1408: "Vancouver"
  VICTORY_POINTS_7259: "Wiktoria"
  VICTORY_POINTS_7677: "Kelowna"
@@ -3235,8 +3235,8 @@
  VICTORY_POINTS_10721: "Wlot Rankina"
  VICTORY_POINTS_12505: "Świętego Jana"
  VICTORY_POINTS_7788: "Narożny Potok"
- VICTORY_POINTS_7758: "Gąsior"
- VICTORY_POINTS_12698: "Wielkie Wodospady"
+ VICTORY_POINTS_7758: "Gander"
+ VICTORY_POINTS_12698: "Grand Falls"
  VICTORY_POINTS_12503: "Zatoka Gęsi"
  VICTORY_POINTS_1785: "Miasto Labradorów"
  VICTORY_POINTS_7361: "Halifax"
@@ -3257,7 +3257,7 @@
  VICTORY_POINTS_7345: "Saint-Jean"
  VICTORY_POINTS_4417: "Drummondville"
  VICTORY_POINTS_12291: "Rimouski"
- VICTORY_POINTS_10715: "Wrzesień-Îles"
+ VICTORY_POINTS_10715: "Sept-Îles"
  VICTORY_POINTS_7807: "Baie-Comeau"
  VICTORY_POINTS_10320: "Wiktoria"
  VICTORY_POINTS_10174: "Saint-Georges"
@@ -3311,7 +3311,7 @@
  VICTORY_POINTS_6717: "Binghamtona"
  VICTORY_POINTS_734: "Rochestera"
  VICTORY_POINTS_9708: "Utica"
- VICTORY_POINTS_6778: "Wodne miasto"
+ VICTORY_POINTS_6778: "Watertown"
  VICTORY_POINTS_11680: "Elmira"
  VICTORY_POINTS_11722: "Źródła Saratogi"
  VICTORY_POINTS_11665: "Wodospady Glensa"
@@ -3428,8 +3428,8 @@
  VICTORY_POINTS_4402: "Hopkinsville"
  VICTORY_POINTS_7547: "Ashland"
  VICTORY_POINTS_1582: "Middlesboro"
- VICTORY_POINTS_4569: "Południowy zachód. Ludwika"
- VICTORY_POINTS_10717: "Miasto Kansas"
+ VICTORY_POINTS_4569: "St. Louis"
+ VICTORY_POINTS_10717: "Kansas City"
  VICTORY_POINTS_10370: "Springfielda"
  VICTORY_POINTS_7607: "Kolumbia"
  VICTORY_POINTS_1534: "Joplin"
@@ -3459,7 +3459,7 @@
  VICTORY_POINTS_12667: "Brookingsa"
  VICTORY_POINTS_1836: "Bismarcka"
  VICTORY_POINTS_10685: "Fargo"
- VICTORY_POINTS_3719: "Wielkie Forki"
+ VICTORY_POINTS_3719: "Grand Forks"
  VICTORY_POINTS_10709: "Minot"
  VICTORY_POINTS_6722: "Dickinsona"
  VICTORY_POINTS_4772: "Jamestown"
@@ -3470,10 +3470,10 @@
  VICTORY_POINTS_7779: "Helena"
  VICTORY_POINTS_1736: "Butte"
  VICTORY_POINTS_4838: "Kalispell"
- VICTORY_POINTS_10593: "Hawr"
- VICTORY_POINTS_1767: "Miasto Miles"
- VICTORY_POINTS_10711: "Kacper"
- VICTORY_POINTS_4723: "Czejenne"
+ VICTORY_POINTS_10593: "Havre"
+ VICTORY_POINTS_1767: "Miles City"
+ VICTORY_POINTS_10711: "Casper"
+ VICTORY_POINTS_4723: "Cheyenne"
  VICTORY_POINTS_4820: "Gillette'a"
  VICTORY_POINTS_12633: "Skalne Źródła"
  VICTORY_POINTS_7814: "Sheridana"
@@ -3505,7 +3505,7 @@
  VICTORY_POINTS_1433: "Valdosta"
  VICTORY_POINTS_9996: "Rzym"
  VICTORY_POINTS_10394: "Ateny"
- VICTORY_POINTS_9949: "Gainesville-Ga ..."
+ VICTORY_POINTS_9949: "Gainesville"
  VICTORY_POINTS_968: "Daltona"
  VICTORY_POINTS_12501: "Nashville"
  VICTORY_POINTS_7797: "Memphis"
@@ -3555,7 +3555,7 @@
  VICTORY_POINTS_1453: "Baton Rouge"
  VICTORY_POINTS_12401: "Shreveport"
  VICTORY_POINTS_4507: "Lafayette’a"
- VICTORY_POINTS_12313: "Jezioro Karola"
+ VICTORY_POINTS_12313: "Lake Charles"
  VICTORY_POINTS_12398: "Houma"
  VICTORY_POINTS_7599: "Aleksandria"
  VICTORY_POINTS_1559: "Monroe-Poniedziałek..."
@@ -3581,7 +3581,7 @@
  VICTORY_POINTS_4884: "Wiktoria"
  VICTORY_POINTS_3960: "Fort Worth"
  VICTORY_POINTS_10778: "Tylera"
- VICTORY_POINTS_10504: "Stacja uniwersytecka"
+ VICTORY_POINTS_10504: "College Station"
  VICTORY_POINTS_10861: "Waco"
  VICTORY_POINTS_5001: "Texarkana"
  VICTORY_POINTS_6968: "Długi widok"
@@ -3610,13 +3610,13 @@
  VICTORY_POINTS_6887: "Wielkie Węzeł"
  VICTORY_POINTS_12627: "Pueblo"
  VICTORY_POINTS_7999: "Durango"
- VICTORY_POINTS_4865: "Miasto Salt Lake"
- VICTORY_POINTS_12699: "Św.Jerzego"
+ VICTORY_POINTS_4865: "Salt Lake City"
+ VICTORY_POINTS_12699: "St. George"
  VICTORY_POINTS_10582: "Ogden"
- VICTORY_POINTS_4668: "Wiosenny"
- VICTORY_POINTS_4742: "Cena"
+ VICTORY_POINTS_4668: "Vernal"
+ VICTORY_POINTS_4742: "Price"
  VICTORY_POINTS_3834: "Tucson"
- VICTORY_POINTS_12765: "Maszt"
+ VICTORY_POINTS_12765: "Flagstaff"
  VICTORY_POINTS_10783: "Yuma"
  VICTORY_POINTS_7920: "Sierra Vista"
  VICTORY_POINTS_11814: "Miasto nad jeziorem Havasu"
@@ -3656,7 +3656,7 @@
  VICTORY_POINTS_11795: "Nadrzecze"
  VICTORY_POINTS_9911: "Bakersfielda"
  VICTORY_POINTS_11757: "Misja Viejo"
- VICTORY_POINTS_6881: "Święta Maria"
+ VICTORY_POINTS_6881: "Santa Maria"
  VICTORY_POINTS_7986: "El Centro"
  VICTORY_POINTS_823: "Palm Springs"
  VICTORY_POINTS_941: "Ridgecrest"
@@ -3689,7 +3689,7 @@
  VICTORY_POINTS_7195: "Kahului"
  VICTORY_POINTS_12021: "Cześć"
  VICTORY_POINTS_10048: "Kailua"
- VICTORY_POINTS_7112: "Kapa"
+ VICTORY_POINTS_7112: "Kapaa"
  VICTORY_POINTS_12140: "Guam"
  VICTORY_POINTS_3995: "Saipan"
  VICTORY_POINTS_13023: "Rota"
@@ -3820,7 +3820,7 @@
  VICTORY_POINTS_7590: "Guantanamo"
  VICTORY_POINTS_7546: "Las Tuńczyk"
  VICTORY_POINTS_10374: "Ciego de Ávila"
- VICTORY_POINTS_4647: "Port Wolny"
+ VICTORY_POINTS_4647: "Freeport"
  VICTORY_POINTS_10254: "Nassau"
  VICTORY_POINTS_1513: "Miasto George"
  VICTORY_POINTS_12477: "Zatoka Montego"
@@ -3837,10 +3837,10 @@
  VICTORY_POINTS_11350: "Bridgetown"
  VICTORY_POINTS_379: "Kingstown"
  VICTORY_POINTS_7123: "Roseau"
- VICTORY_POINTS_11106: "Świętego Jerzego"
- VICTORY_POINTS_3284: "Port-of-Hiszpania"
+ VICTORY_POINTS_11106: "St. Georges"
+ VICTORY_POINTS_3284: "Port of Spain"
  VICTORY_POINTS_13012: "Tobago"
- VICTORY_POINTS_7936: "Kalifornia"
+ VICTORY_POINTS_7936: "Cali"
  VICTORY_POINTS_7991: "Tumaco"
  VICTORY_POINTS_10494: "Buenaventura"
  VICTORY_POINTS_4969: "Jurado"
@@ -3881,7 +3881,7 @@
  VICTORY_POINTS_5317: "Puerto Ayacucho"
  VICTORY_POINTS_5056: "San Fernando de Apure"
  VICTORY_POINTS_8080: "El Tygrys"
- VICTORY_POINTS_8024: "Dolina la Pascua"
+ VICTORY_POINTS_8024: "Valle de la Pascua"
  VICTORY_POINTS_4892: "Achagua"
  VICTORY_POINTS_4942: "Acarigua"
  VICTORY_POINTS_4982: "Georgetown"
@@ -3893,8 +3893,8 @@
  VICTORY_POINTS_7594: "Caxias"
  VICTORY_POINTS_7638: "Pelota"
  VICTORY_POINTS_1542: "Passo Fundo"
- VICTORY_POINTS_1598: "Święta Maria"
- VICTORY_POINTS_4575: "Urugwaja"
+ VICTORY_POINTS_1598: "Santa Maria"
+ VICTORY_POINTS_4575: "Uruguaiana"
  VICTORY_POINTS_4604: "Bagé"
  VICTORY_POINTS_4436: "Camaqua"
  VICTORY_POINTS_7581: "Ijuí"
@@ -3959,7 +3959,7 @@
  VICTORY_POINTS_2204: "Sinop"
  VICTORY_POINTS_8175: "Alta Floresta"
  VICTORY_POINTS_2142: "Tangara da Serra"
- VICTORY_POINTS_2181: "Trzy jezioro"
+ VICTORY_POINTS_2181: "Três Lagoas"
  VICTORY_POINTS_8224: "Dourados"
  VICTORY_POINTS_8189: "Corumba"
  VICTORY_POINTS_5200: "Jardima"
@@ -3975,7 +3975,7 @@
  VICTORY_POINTS_8184: "Senhor do Bonfim"
  VICTORY_POINTS_8177: "Ireka"
  VICTORY_POINTS_5194: "Guanambi"
- VICTORY_POINTS_5218: "Dom Nowa"
+ VICTORY_POINTS_5218: "Casa Nova"
  VICTORY_POINTS_5168: "Recife"
  VICTORY_POINTS_10998: "Maceió"
  VICTORY_POINTS_8143: "Aracaju"
